--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_green">#8ED547</color>
+    <color name="green">#136C20</color>
+    <color name="yellow">#FFC717</color>
+    <color name="grey">#AFAFAF</color>
 </resources>
